website/versioned_docs/version-2.12.x/reference/targets/kotlin_sources.mdx
---
title: kotlin_sources
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `kotlin_source` target for each file in the `sources` field.

Backend: <span className="color--primary">`pants.backend.experimental.kotlin`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

## `sources`

<Field
    type_repr={`field.type_hint`}
    default_repr={`('*.kt',)`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['example.ext', 'test_*.ext', '!test_ignore.ext']`.

</Field>

## `skip_ktlint`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.experimental.kotlin.lint.ktlint"
>

If true, don&#x27;t run Ktlint on this target&#x27;s code.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.12/docs/targets#target-addresses and https://www.pantsbuild.org/v2.12/docs/targets#target-generation for more about how addresses are formed, including for generated targets. You can also run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list dir:` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `kotlinc_plugins`

<Field
    type_repr={`field.type_hint`}
>

The IDs of Kotlin compiler plugins that this source file requires.

The plugin must be defined by a corresponding `kotlinc_plugin` AND `jvm_artifact` target, and must be present in this target&#x27;s resolve&#x27;s lockfile.

If not specified, this will default to the plugins specified in `[kotlinc].plugins_for_resolve` for this target&#x27;s resolve.

</Field>

## `resolve`

<Field
    type_repr={`field.type_hint`}
>

The resolve from `[jvm].resolves` to use when compiling this target.

If not defined, will default to `[jvm].default_resolve`.

</Field>

## `jdk`

<Field
    type_repr={`field.type_hint`}
>

The major version of the JDK that this target should be built with. If not defined, will default to `[jvm].default_source_jdk`.

</Field>

## `experimental_provides_types`

<Field
    type_repr={`field.type_hint`}
>

Signals that the specified types should be fulfilled by these source files during dependency inference.

This allows for specific types within packages that are otherwise inferred as belonging to `jvm_artifact` targets to be unambiguously inferred as belonging to this first-party source.

If a given type is defined, at least one source file captured by this target must actually provide that symbol.

</Field>



</span>